--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
                     </execution>
                 </executions>
             </plugin>
+             <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+  </plugins>
             <!--<plugin>-->
                 <!--<groupId>io.fabric8</groupId>-->
                 <!--<artifactId>fabric8-maven-plugin</artifactId>-->
