--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,10 @@ kind: Deployment
 metadata:
   name: hello-world
 spec:
-  replicas: 1 
+  replicas: 1
+  selector:
+      matchLabels:
+        app.kubernetes.io/name: hello-world
   template:
     metadata:
       labels:
