--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello-world-pod
-        image: arungupta/helloworld-spring-boot:latest
+        image: shreyadey16/testdockerrepo:latest01
         ports: 
         - containerPort: 80
         - containerPort: 443
