--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
     <properties>
         <java.version>1.8</java.version>
         <fabric8.generator.spring-boot.name>arungupta/${project.artifactId}</fabric8.generator.spring-boot.name>
+        <sonar.host.url>http://44.210.149.66:9000/</sonar.host.url>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>Admin@123</sonar.password>
+        <sonar.projectBaseDir>/home/ubuntu/sonar</sonar.projectBaseDir>
     </properties>
 
     <build>
