--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello-world-pod
-        image: {{ .Values.image_name }}
+        image: shreyadey16/sonardockerhar:latest
         ports: 
         - containerPort: 80
         - containerPort: 443
