--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
         <testFailureIgnore>true</testFailureIgnore>
     </configuration>
 </plugin>
+            <plugin>
+                                <groupId>org.sonarsource.scanner.maven</groupId>
+                                <artifactId>sonar-maven-plugin</artifactId>
+                                <version>3.7.0.1746</version>
+                        </plugin>
             <!--<plugin>-->
                 <!--<groupId>io.fabric8</groupId>-->
                 <!--<artifactId>fabric8-maven-plugin</artifactId>-->
