--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
                                 <artifactId>sonar-maven-plugin</artifactId>
                                 <version>3.7.0.1746</version>
                         </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
             <!--<plugin>-->
                 <!--<groupId>io.fabric8</groupId>-->
                 <!--<artifactId>fabric8-maven-plugin</artifactId>-->
