--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <sonar.login>admin</sonar.login>
         <sonar.password>Admin@123</sonar.password>
         <sonar.projectBaseDir>/home/ubuntu/sonar</sonar.projectBaseDir>
+        <sonar.java.binaries>target</sonar.java.binaries>
     </properties>
 
     <build>
