--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.6</version>
         </plugin>
+             <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <configuration>
+                        <testFailureIgnore>true</testFailureIgnore>
+                     </configuration>
+                </plugin>
             <!--<plugin>-->
                 <!--<groupId>io.fabric8</groupId>-->
                 <!--<artifactId>fabric8-maven-plugin</artifactId>-->
